--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Essentia Services Development <dev@essentia.services>"]
 description = "Pure Rust browser engine with consciousness integration"
 license = "MIT"
 repository = "https://github.com/Essentia-Services-Development/essentia_browser_plugin"
+readme = "README.md"
 keywords = ["essentia", "browser", "rendering", "web", "plugin"]
 categories = ["web-programming", "gui"]
 
