--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
 name = "essentia_browser_plugin"
-version = "0.1.0"
-edition = "2024"
-authors = ["Essentia Services Development <dev@essentia.services>"]
 description = "Pure Rust browser engine with consciousness integration"
-license = "MIT"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+publish.workspace = true
 repository = "https://github.com/Essentia-Services-Development/essentia_browser_plugin"
-readme = "README.md"
 keywords = ["essentia", "browser", "rendering", "web", "plugin"]
 categories = ["web-programming", "gui"]
 
 [dependencies]
-essentia_core = { path = "../../core/essentia_core" }
-essentia_traits = { path = "../../core/essentia_traits" }
-essentia_plugin_system = { path = "../../core/essentia_plugin_system" }
-essentia_ffui = { path = "../../ui/essentia_ffui" }
-essentia_consciousness = { path = "../../core/essentia_consciousness" }
+# Core dependencies (workspace inheritance)
+essentia_core = { workspace = true }
+essentia_traits = { workspace = true }
+essentia_plugin_system = { workspace = true }
+essentia_ffui = { workspace = true }
+essentia_consciousness = { workspace = true }
 
 [dev-dependencies]
 
